	* arch/arm/src/stm32/stm32_rcc.c - Fixed an error in clock initialization.
	  On some boards (none of mine), the HSE (high speed external clock) delay
	  loop times out if the optimization level is high. The STM32 then falls
	  back to the HSI (internal clock), and the system clock is too slow by a
	  factor of 11.1%.  This was fixed by simply add the volatile storage class
	  to the timeout loop counter
	* arch/arm/src/stm32/stm32_irq.c - Fixed a critical bug in the interrupt
	  control logic.  The wrong register was being used for interrupts in a
	  certain range.  Worked fine until you try to use an interrupt in that
	  range!

0.4.14 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/stm32/stm32_gpio.c - Add support for configure an input GPIO
	  to generate an EXTI interrupt.
	* config/stm3210e-eval/src/up_buttons.c - Add support for on-board buttons.
	* include/nuttx/rwbuffer.h -- Add generic support for read-ahead buffering
	  and write buffering that can be used in any block driver.
	* include/nuttx/wqueue.h -- Added a generic worker thread that can used to
	  defer processing from an interrupt to a task.
	* include/nuttx/sdio.h -- Defines a generic SD/SDIO interface can can be
	  bound to a MMC/SD driver to provide SDIO-based MMC/SD support.
	* drivers/mmcsd/mmcsd_sdio.c -- Provides a an SDIO-based MMC/SD driver.
	* arch/arm/src/stm32/stm32_sdio.c -- Provides an STM32 implementation of
	  the SDIO interface defined in include/nuttx/sdio.h.

	  NOTE: On initial check-in, mmcsd_sdio.c and stm32_sdio.c are merely
	  skeleton frameworks for the driver.

	* fs/fs_mount.c -- Correct error handling logic.  If the bind() method
	  fails, then a reserved node is left in the tree.  This causes subsequent
	  attempts to mount at the location to fail (reporting that the node
	  already exists).  This is a probably for block drivers for removable
	  media: The bind method could fail repeatedly until media is asserted.


